# animaldex

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: main.py  seed_data.py  test_models.py
backend/app/: database.py
backend/app/models/: models.py
backend/app/routers/: animals.py  conservation_efforts.py  habitats.py
backend/app/schemas/: animal.py  base.py  conservation_effort.py  habitat.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/animals/[id]/: page.tsx
frontend/src/app/conservation-action-center/: page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/ecosystem-builder/: page.tsx
frontend/src/components/animal-cards/: AnimalCard.tsx
frontend/src/components/logo/: AnimalDexLogo.tsx
frontend/src/components/nav/: NavBar.tsx
frontend/src/lib/: utils.ts
frontend/src/types/: index.ts
